k8s/tz-wrapped/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tz-wrapped-backend
  namespace: tz-wrapped
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - tz-wrapped.dev.gke.papers.tech
      secretName: tz-wrapped-dev-tls
  rules:
    - host: tz-wrapped.dev.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tz-wrapped-backend
                port:
                  number: 80
